# Data-Science-Camp-Tasks

./: .gitignore  Sum and product.ipynb
Home_Task_11/: lesson_11_supervised_ml_hometask.ipynb
Home_Task_12/: lesson_12_clustering_kmeans_hometask.ipynb
Home_Task_13/: lesson_13_clustering_dbscan_hometask.ipynb
Home_Task_14/: lesson_14_anomaly_detection_hometask.ipynb
Home_Task_16/: lesson_16_rec_sys_hometask.ipynb
Home_Task_17/: lesson_17_rec_sys_apriori_hometask.ipynb
Home_Task_19/: lesson_19_hypothesis_testing_hometask.ipynb
Home_Task_2/: Sum and product.ipynb  Task about lakes.ipynb
Home_Task_21/: lesson_21_text_classification_sentiment_analysis_hometask.ipynb.ipynb  lesson_23_text_classification_sentiment_analysis_hometask.ipynb
Home_Task_23/: lesson_23_time_series_forecasting_hometask.ipynb
Home_Task_24/: lesson_24_pytorch_hometask.ipynb
Home_Task_25/: lesson_25_tensorflow_hometask.ipynb
Home_Task_26/: lesson_26_cnn_hometask.ipynb
Home_Task_3/: Energy Indicators.xls  Home_task_pandas.ipynb  scimagojr country rank 1996-2023.xlsx
Home_Task_30/: README.md  app.py  client.py  pyproject.toml
Home_Task_4/: Car_Insurance_Claim.csv  home_task_visualization.ipynb
Home_Task_5/: Home_task_KNN_classification.ipynb
Home_Task_6/: home_task_linear_regression.ipynb
Home_Task_7/: lesson_7_logistic_regression_hometask.ipynb
Home_Task_8/: home_task_Decision_Trees.ipynb
Home_Task_9/: lesson_9_nn_hometask.ipynb
Home_task_33/: lesson_33_nltk_hometask.ipynb
Task_about_glasses/: task_about_glasses.ipynb
Test Task/: First_Task.ipynb  (+2 more)
(+1 files in other folders)
